Fix spacing between list items in micro posts

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,6 +64,15 @@ body {
   padding: 0 1.5rem;
 }
 
+.short-post .e-content li {
+  margin-bottom: .4rem;
+}
+
+.short-post .e-content ul li:last-child
+.short-post .e-content ol li:last-child {
+  margin-bottom: 0;
+}
+
 .short-post .post-meta {
   padding: .6rem 1rem 0;
   font-size: .8rem;
